--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "sass": "^1.83.4",
+    "sass-loader": "^16.0.4",
     "vue": "^3.5.13"
   },
   "devDependencies": {
